# B-2

./: .gitattributes  .gitignore  CMakeLists.txt  ManyFormat.cpp  README.md  account.cpp  account.h  main.cpp  transaction.cpp  transaction.h
CMake/: FindSDL2_image.cmake
